Delete nonBreakingSpace that only caused formatting issues and aren't otherwise needed.

--- a/prince/helpfiles/locale/en-us/cd01-00-gettingstarted.xhtml
+++ b/prince/helpfiles/locale/en-us/cd01-00-gettingstarted.xhtml
@@ -56,7 +56,7 @@ for typesetting, and other more advanced tasks. The appendices summarize
 the command menus, toolbars, and keyboard shortcuts. </bodyText><msibreak type="newPage"><newPageRule/></msibreak>
 <bodyText>The
 book itself was produced using SWP Version 6, and serves as an example of
-the kinds of things you can do: Dropped capitals, margin notes, references,<hspace type="nonBreakingSpace"> </hspace>inline
+the kinds of things you can do: Dropped capitals, margin notes, references, inline
 graphics with text that runs around them, and of course attractive and accurately
 formatted mathematics.</bodyText></chapter></body> 
 </html>
