--- a/prince/helpfiles/locale/en-us/cd01-01-gettingstarted.xhtml
+++ b/prince/helpfiles/locale/en-us/cd01-01-gettingstarted.xhtml
@@ -35,10 +35,12 @@ with colleagues, regardless of their system environment. With its entirely
 new Mozilla-based architecture, Version 6 provides more flexibility for
 your workplace. You can save or export your documents in multiple formats
 according to your publication and portability needs. </bodyText>
+
 <subsection id="tsid_3141597">
 <sectiontitle>Cross-platform capability</sectiontitle> 
+
 <bodyText><indexitem req="varioref"><prisec>features!existing users</prisec></indexitem>SWP,
-SW, and SNB now operate on Windows systems running Windows XP and up;<hspace type="nonBreakingSpace"> </hspace>Macintosh
+SW, and SNB now operate on Windows systems running Windows XP and up; Macintosh
 systems running OS X.5 Intel and later; and systems running Linux. For SWP
 and SNB, Macintosh systems should be Intel 64-bit capable. Version 6 saves
 your documents as <texb enc="1" name="XML"><![CDATA[\XML{}]]></texb> files,
@@ -70,8 +72,7 @@ the Internet with a browser. </bodyText></subsection>
 <sectiontitle>Mathematics in <texb enc="1" name="MathML"><![CDATA[\MathML{}]]></texb></sectiontitle>
 
 <bodyText>In <texb enc="1" name="XML"><![CDATA[\XML{}]]></texb> and <texb enc="1" name="XHTML"><![CDATA[\XHTML{}]]></texb>
-files, Version 6 represents your mathematics<hspace type="nonBreakingSpace"> </hspace>
-as <texb enc="1" name="MathML"><![CDATA[\MathML{}]]></texb>. </bodyText></subsection>
+files, Version 6 represents your mathematics as <texb enc="1" name="MathML"><![CDATA[\MathML{}]]></texb>. </bodyText></subsection>
 <subsection id="tsid_3141602">
 <sectiontitle><shortTitle>Display options</shortTitle>Multiple display options</sectiontitle>
 
@@ -207,7 +208,7 @@ typesetting specifications. </bodyText></subsection>
 
 <bodyText>REV<texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 is a package of <texlogo xmlns="http://www.w3.org/1999/xhtml" name="latex">L<sup>A</sup>T<sub>E</sub>X</texlogo>
-macros designed for preparing <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>physics
+macros designed for preparing physics
 manuscripts. The software includes a shell with typesetting specifications
 for producing typeset documents <indexitem req="varioref"><prisec>REVTeX@REV\TeX </prisec></indexitem>for
 several different publications. </bodyText></subsection>
