--- a/prince/helpfiles/locale/en-us/cd01-02-gettingstarted.xhtml
+++ b/prince/helpfiles/locale/en-us/cd01-02-gettingstarted.xhtml
@@ -29,12 +29,12 @@ or some other format option. In
 Scientific Workplace
  (SWP), however, you select the text and apply a meaningful tag; say, "Emphasis."
 The exact way the text is displayed is independent of this tagging. It could
-be changed at production time to suit different requirements:<hspace type="nonBreakingSpace"> </hspace>
+be changed at production time to suit different requirements:
 italics for print, bold for the Web, underline for a screenplay, etc. </bodyText>
 <bodyText>Working
 this way, you don't have to go back and retag everything that you might
 have tagged "italic" if you need for it to be underlined; you simply change
-how the tag "Emphasis" is printed and displayed. One change instead of many.<hspace type="nonBreakingSpace"> </hspace>
+how the tag "Emphasis" is printed and displayed. One change instead of many.
 The logical separation of the creative process of writing documents from
 the mechanical process of formatting them has always been at the heart of
 the user interface in 
