--- a/prince/helpfiles/locale/en-us/cd02-01-basics.xhtml
+++ b/prince/helpfiles/locale/en-us/cd02-01-basics.xhtml
@@ -85,7 +85,7 @@ and then into the zipped up .sci file. </bodyText><vspace dim="1in" type="custom
 <sectiontitle>Import <texb enc="1" name="TeXhd"><![CDATA[\TeXhd{}]]></texb>...</sectiontitle>
 
 <bodyText><indexitem req="varioref"><prisec>Import TeX!on File menu</prisec></indexitem><indexitem req="varioref"><prisec>import!TeX@\TeX </prisec></indexitem><indexitem req="varioref"><prisec>TeX@\TeX !import</prisec></indexitem>Allows
-you to open and edit<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+you to open and edit <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 documents and documents created with previous versions of MacKichan software.
 These documents will be converted to .sci format. 
 <centeredEnv><bodyText><object data="graphicscd/import_tex.png" id="tsid_3141701"/></bodyText></centeredEnv>
@@ -94,10 +94,10 @@ These documents will be converted to .sci format.
 <sectiontitle>Export <texb enc="1" name="TeXhd"><![CDATA[\TeXhd{}]]></texb>...</sectiontitle>
 
 <bodyText><indexitem req="varioref"><prisec>Export TeX!on File menu</prisec></indexitem>Gives
-you the ability to share documents with a<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+you the ability to share documents with a <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 user who does not have access to MacKichan software. Choosing this command
 brings up a dialog box with which you may choose to save the current document
-in<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+in <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 format. 
 <centeredEnv><bodyText><object data="graphicscd/export_tex.png" id="tsid_3141702"/></bodyText></centeredEnv>
  </bodyText></subsubsection>
@@ -174,7 +174,7 @@ tab controls page orientation and the scale at which to print. The Margins
 and right and also lets you determine the placement of headers and footers.
 </bodyText></subsubsection>
 <subsubsection id="tsid_3141625">
-<sectiontitle>Print Preview<hspace type="nonBreakingSpace"> </hspace></sectiontitle>
+<sectiontitle>Print Preview</sectiontitle>
 
 <bodyText><indexitem req="varioref"><prisec>Preview!on File menu</prisec></indexitem><indexitem req="varioref"><prisec>PDF files!print!on File menu</prisec></indexitem>Choose
 to preview what your document will look like when printed. You may choose
@@ -194,7 +194,7 @@ so opens the Print dialog box in which you may specify print options such
 as the page range to print, the number of copies, whether to print to a
 file, and how to handle frames. </bodyText></subsubsection>
 <subsubsection id="tsid_3141627">
-<sectiontitle>Document Info....<hspace type="nonBreakingSpace"> </hspace></sectiontitle>
+<sectiontitle>Document Info....</sectiontitle>
 
 <bodyText><indexitem req="varioref"><prisec>Document Info!on File menu</prisec></indexitem>Accesses
 the Document Info dialog box, which has tabs for viewing and editing various
@@ -217,10 +217,10 @@ styles to use with the current document. </bodyText></subsubsection>
 the program, closing all documents in the process. If you have unsaved changes
 in any open documents, you will be asked if you wish to save, discard changes,
 or cancel the Quit operation. On the Macintosh version, <notewrapper xmlns="http://www.w3.org/1999/xhtml"><note type="marginpar" id="tsid_3141744"><bodyText><QTR type="QQQMarginheading">Macintosh
-Users Note</QTR></bodyText></note></notewrapper>this command is on the SWP<hspace type="nonBreakingSpace"> </hspace>(Application)
-menu. </bodyText>
+Users Note</QTR></bodyText></note></notewrapper>this command is on the SWP (Application) menu. </bodyText>
 </subsubsection>
 </subsection>
+
 <subsection id="tsid_3141602">
 <sectiontitle><shortTitle>Edit Menu</shortTitle>EDIT Menu</sectiontitle>
 
@@ -387,7 +387,7 @@ a frame at the insertion <notewrapper xmlns="http://www.w3.org/1999/xhtml"><note
 A frame is a box that may contain text, tables, images, or other objects.
 There are many options you may specify when creating a frame, including
 the margins, the border thickness and color, and the way the frame is displayed
-(at a certain position, floating, etc.). Additional information<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="vpageref"><![CDATA[\vpageref{AddFrame}]]></texb><texb enc="1" name="xspace"><![CDATA[\xspace]]></texb>shows
+(at a certain position, floating, etc.). Additional information <texb enc="1" name="vpageref"><![CDATA[\vpageref{AddFrame}]]></texb><texb enc="1" name="xspace"><![CDATA[\xspace]]></texb>shows
 you how to enter frames. </bodyText><vspace dim="1in" type="customSpace"/></subsubsection>
 <subsubsection id="tsid_3141649">
 <sectiontitle>Breaks...</sectiontitle> 
@@ -459,7 +459,7 @@ information on the type of notes you may insert and how to work with them.
 <sectiontitle>Typeset Object</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>Typeset Object!on Insert menu</prisec></indexitem>A
 typeset object contains information about the typeset form of the document,
-such as citations, index locations, cross-references,<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+such as citations, index locations, cross-references, <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 fields, and bibliographic references. This command brings up one of several
 dialog boxes with which you may customize one of these objects to place
 at the insertion point. Consult Chapter <xref key="chap:DocProduction" reftype="obj" req="varioref"/>
@@ -518,15 +518,15 @@ next two commands in the View menu apply to <texlogo xmlns="http://www.w3.org/19
 
 <bodyText><indexitem req="varioref"><prisec>TeX Log!on View menu</prisec></indexitem>Display
 the most recent <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
-processing log. The log shows results of running<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+processing log. The log shows results of running <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 on your document and may provide information to aid in troubleshooting should
 you have difficulties. </bodyText></subsubsection>
 <subsubsection id="tsid_3141665">
 <sectiontitle><texb enc="1" name="TeXhd"><![CDATA[\TeXhd{}]]></texb> File</sectiontitle>
 
 <bodyText><indexitem req="varioref"><prisec>TeX File!on View menu</prisec></indexitem>Show
-the<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
-file for the current document. A separate window opens containing the<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+the <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+file for the current document. A separate window opens containing the <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 code for the document on which you're working. </bodyText>
 <bodyText>The
 next two sets of commands in the View menu let you select which sidebars
