--- a/prince/helpfiles/locale/en-us/cd03-00-simpledoc.xhtml
+++ b/prince/helpfiles/locale/en-us/cd03-00-simpledoc.xhtml
@@ -43,11 +43,11 @@ versions of the program, which saved all files as <texlogo xmlns="http://www.w3.
 files with a file extension of .tex. Of course, in Version 6 you can import,
 modify, and export existing .tex files created with earlier versions, and
 you can create new <texlogo xmlns="http://www.w3.org/1999/xhtml" name="latex">L<sup>A</sup>T<sub>E</sub>X</texlogo>
-files by exporting your documents as<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+files by exporting your documents as <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 files. </bodyText><bodyText>
 </bodyText><bodyText xmlns="http://www.w3.org/1999/xhtml">This chapter explains how to create new documents
 and how to open existing documents saved in various file formats. It also
 explains how Version 6 saves and closes documents and describes the export
-options that are available to you.<hspace type="nonBreakingSpace"> </hspace>
+options that are available to you.
 The chapter also discusses creating document copies. </bodyText><bodyText><vspace xmlns="http://www.w3.org/1999/xhtml" dim="\fill " type="customSpace"/><msibreak xmlns="http://www.w3.org/1999/xhtml" type="newPage"><newPageRule/></msibreak></bodyText><chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141594" msiSelectionManagerID="38"></chapter></body> 
 </html>
