--- a/prince/helpfiles/locale/en-us/cd03-03-simpledoc.xhtml
+++ b/prince/helpfiles/locale/en-us/cd03-03-simpledoc.xhtml
@@ -35,14 +35,13 @@ file</sectiontitle>
 <numberedListItem><bodyText>Open the document and choose
 File <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Export
 <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>...
-The Export<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+The Export <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 File dialog box appears. 
 <centeredEnv><bodyText>  <hspace dim="-\leftmargini " type="customSpace"/><object data="graphicscd/export_tex.png" id="tsid_3141615"/></bodyText></centeredEnv>
  </bodyText></numberedListItem>
 <numberedListItem><bodyText>Select a location
-and name for the file.<hspace type="nonBreakingSpace"> </hspace><br/></bodyText></numberedListItem>
-<numberedListItem><bodyText>Click
-Save. The file is exported; the original Version 6 file stays open. 
+and name for the file.</bodyText></numberedListItem>
+<numberedListItem><bodyText>Click Save. The file is exported; the original Version 6 file stays open. 
 
 </bodyText>
 
@@ -87,8 +86,7 @@ Copy As... The Save Document As dialog box appears.
 <numberedListItem><bodyText>Select a location
 and type a name for the document copy. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Click
-Save. The copy is created<hspace type="nonBreakingSpace"> </hspace>
-and the original document is left open. </bodyText>
+Save. The copy is created and the original document is left open. </bodyText>
 
 </numberedListItem>
 </numberedlist>
