--- a/prince/helpfiles/locale/en-us/cd04-00-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-00-editingdocs.xhtml
@@ -22,7 +22,7 @@
 <body msiSelectionManagerID="68"><chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141595" msiSelectionManagerID="66">
 <sectiontitle>Editing Documents</sectiontitle> 
 <bodyText>Entering text
-is straightforward<hspace type="nonBreakingSpace"> </hspace>in <notewrapper xmlns="http://www.w3.org/1999/xhtml"><note type="marginpar" id="tsid_3142042"><bodyText>
+is straightforward in <notewrapper xmlns="http://www.w3.org/1999/xhtml"><note type="marginpar" id="tsid_3142042"><bodyText>
 <texb enc="1" name="raggedright"><![CDATA[\raggedright]]></texb><texb enc="1" name="set spacing"><![CDATA[\setlength {\parskip }{14pt}]]></texb>
 <QTR type="QQQMarginNoteNewChapter">Before You Begin</QTR></bodyText>
 <bodyText><QTR type="QQQMarginNoteNewChapter">Basic
