--- a/prince/helpfiles/locale/en-us/cd04-01-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-01-editingdocs.xhtml
@@ -36,7 +36,7 @@ interface actions will differ depending on whether you are entering text
 or math. Thus we refer to being in either text mode or math mode. The <indexitem req="varioref"><prisec>program!defaults!Math/Text</prisec></indexitem>default
 state is text mode; it is easy to toggle between the two modes and it is
 also easy to determine what mode you are in. Unless you actively change
-to mathematics, the program displays a<hspace type="nonBreakingSpace"> </hspace>``T``
+to mathematics, the program displays a ``T``
 on the Standard toolbar and </bodyText>
 
 <bulletlist>  
@@ -57,14 +57,14 @@ point is in text mode. </bodyText>
 <subparagraph id="tsid_3141602">
 <sectiontitle>To toggle between text and mathematics</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>Math/Text!toggle</prisec></indexitem><indexitem req="varioref"><prisec>modes!toggling between text and math</prisec></indexitem>Click
-the<hspace type="nonBreakingSpace"> </hspace>``T'' on the standard
-toolbar. The<hspace type="nonBreakingSpace"> </hspace>``T'' changes
-to<hspace type="nonBreakingSpace"> </hspace>``M,'' the insertion point
+the ``T'' on the standard
+toolbar. The ``T'' changes
+to ``M,'' the insertion point
 changes to red and appears between brackets. </bodyText>
 <bodyText>You may
 also choose the Math command from the Insert menu. </bodyText>
 <bodyText>When
-you toggle to mathematics, the Math/Text button changes to an<hspace type="nonBreakingSpace"> </hspace>``M''
+you toggle to mathematics, the Math/Text button changes to an ``M''
 and the program </bodyText>
 
 <bulletlist>  
