--- a/prince/helpfiles/locale/en-us/cd04-02-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-02-editingdocs.xhtml
@@ -125,7 +125,7 @@ hyphenates text when you typeset your document, but not when you produce
 it without typesetting or when you use SNB. However, you can request discretionary,
 or conditional, hyphenation for specific words in case they occur at the
 end of a line. If you place a discretionary hyphen in a word, the program
-breaks the word at that point if necessary, both in print (and, if View<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Invisibles
+breaks the word at that point if necessary, both in print (and, if View <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Invisibles
 is selected) in the program window. </bodyText></subparagraph>
 <subparagraph id="tsid_3141607">
 <sectiontitle>To enter a discretionary hyphen</sectiontitle> 
