--- a/prince/helpfiles/locale/en-us/cd04-03-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-03-editingdocs.xhtml
@@ -35,7 +35,7 @@ to type some text items repeatedly, such as your name or affiliation. You
 can store these frequently typed items as 
 fragments
 ---information saved in separate files for later recall---and import them
-into your documents quickly. Fragments can contain text, mathematics,<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+into your documents quickly. Fragments can contain text, mathematics, <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 strings, <texb enc="1" name="XHTML"><![CDATA[\XHTML{}]]></texb> code, graphics,
 or anything else that can go on the clipboard. Information in fragments
 can carry tags. Fragments from each document are available to all. </bodyText>
@@ -130,7 +130,7 @@ it, the program doesn't make a substitution when you type the corresponding
 sequences of letters and numbers. </bodyText>
 <bodyText>Your program installation
 includes many predefined autosubstitution sequences. You can view them by
-choosing Tools<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Automatic
+choosing Tools <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Automatic
 Substitution... Click an item in the Keystrokes list at the right to view
 its definition. </bodyText>
 <subparagraph id="tsid_3141611">
