--- a/prince/helpfiles/locale/en-us/cd04-04-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-04-editingdocs.xhtml
@@ -40,7 +40,7 @@ available to the active document appear in the <indexitem req="varioref"><prisec
 Tag list on the Standard toolbar. </bodyText>
 <bodyText>The appearance and
 behavior of tagged information depends on the tag properties, which are
-defined twice in SWP and SW:<hspace type="nonBreakingSpace"> </hspace>
+defined twice in SWP and SW:
 once in the typesetting specifications, which are used when you typeset
 your document; and, once in the .css file, which is used when the document
 is directly printed or displayed. The two sets of properties may differ
