--- a/prince/helpfiles/locale/en-us/cd05-00-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-00-workwithmath.xhtml
@@ -38,8 +38,7 @@ Scientific WorkPlace
 Scientific Word
  (SW), and 
 Scientific Notebook
- (SNB) entering math is straightforward<hspace type="nonBreakingSpace"> </hspace>in
-Version 6.<hspace type="nonBreakingSpace"> </hspace> Working right
+ (SNB) entering math is straightforward in Version 6.  Working right
 in the program window, you use familiar notation to <indexitem req="varioref"><prisec>entering mathematics</prisec></indexitem>enter
 mathematical characters, symbols, and objects into your document. Simple
 commands let you create displayed or inline mathematics. </bodyText>
@@ -55,5 +54,5 @@ editing procedures are available for certain mathematical objects. </bodyText>
 chapter gives instructions for entering and editing mathematical information.
 It explains how to enter mathematical symbols and characters and how to
 create automatically formatted objects, such as fractions, radicals, and
-operators.<hspace type="nonBreakingSpace"> <br/></hspace></bodyText></chapter></body> 
+operators.  <br/></hspace></bodyText></chapter></body> 
 </html>
