--- a/prince/helpfiles/locale/en-us/cd05-01-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-01-workwithmath.xhtml
@@ -30,7 +30,7 @@ mathematics. </bodyText><vspace dim="\fill " type="customSpace"/><msibreak type=
 we stated in the previous chapter, the default state for Version 6 is text
 mode; it is easy to toggle between the two modes and it is also easy to
 determine what mode you are in. Unless you actively change to mathematics,
-the program displays a<hspace type="nonBreakingSpace"> </hspace>``T``
+the program displays a ``T``
 on the Standard toolbar and </bodyText>
 
 <bulletlist>  
@@ -52,15 +52,15 @@ a space when you press the spacebar.
 <sectiontitle>To toggle between text and mathematics</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>entering mathematics!Math/Text toggle</prisec></indexitem><indexitem req="varioref"><prisec>mathematics!math/text toggle</prisec></indexitem></bodyText>
 <bodyText>Click
-the<hspace type="nonBreakingSpace"> </hspace>``T'' on the standard
-toolbar. The<hspace type="nonBreakingSpace"> </hspace>``T'' changes
-to<hspace type="nonBreakingSpace"> </hspace>``M,'' the insertion point
+the ``T'' on the standard
+toolbar. The ``T'' changes
+to ``M,'' the insertion point
 changes to red and appears between brackets. </bodyText>
 <bodyText>You may
 also choose the <indexitem req="varioref"><prisec>Math command!description</prisec></indexitem>Math
 command from the Insert menu. </bodyText>
 <bodyText>When you toggle to <indexitem req="varioref"><prisec>math defaults!behavior</prisec></indexitem>mathematics,
-the Math/Text button changes to an<hspace type="nonBreakingSpace"> </hspace>``M''
+the Math/Text button changes to an ``M''
 and the program </bodyText>
 
 <bulletlist>  
@@ -104,7 +104,7 @@ Math tag.
 </numberedlist>
  
 <bodyText>On the screen, most document shells use color to distinguish
-between mathematics and<hspace type="nonBreakingSpace"> </hspace> text.
+between mathematics and text.
 The default color for mathematics is red; the default color for text is
 black. Math names for functions, operators, and variables appear in gray.
 The program automatically formats your mathematics correctly when you display
@@ -120,7 +120,7 @@ are set in small type. </bodyText>
 <bodyText><indexitem req="varioref"><prisec>mathematics!displayed</prisec></indexitem>Displayed
 mathematics appears centered on a separate line and set off from the information
 above and below by additional space. Operators within the display are larger
-than<hspace type="nonBreakingSpace"> </hspace>inline operators, limits
+than inline operators, limits
 are positioned above and below operators and functions, and the numerators
 and denominators of fractions are set in full-size type. </bodyText>
 </subparagraph>
