--- a/prince/helpfiles/locale/en-us/cd05-02-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-02-workwithmath.xhtml
@@ -31,7 +31,7 @@ palettes, especially the Symbol Cache. </bodyText>Let the mouse hover over
 each item on the palettes to display the name of the symbol or character.
 </bulletListItem>
 <bulletListItem><bodyText>With the keyboard, using shortcut
-macros (usually the<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+macros (usually the <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 name of the symbol). </bodyText>The Macro list shows the name you entered
 most recently. </bulletListItem>
 <bulletListItem><bodyText>With an alternate
