--- a/prince/helpfiles/locale/en-us/cd05-04-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-04-workwithmath.xhtml
@@ -51,7 +51,7 @@ cells expand as needed. </bodyText>
 <subparagraph id="tsid_3141608">
 <sectiontitle>To enter a mathematical object</sectiontitle> 
 <bodyText>Choose
-Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 Objects and then choose the object you want. </bodyText>
 <bodyText>The program
 inserts a template representing the object and places the insertion point
@@ -71,13 +71,12 @@ and Binomials</sectiontitle>
 program treats fractions and binomials similarly, automatically extending
 the bar of a vertical fraction or binomial as far as necessary to encompass
 the entire fraction. By default, the numerator and denominator are set in
-a small-size font for<hspace type="nonBreakingSpace"> </hspace>inline
-mathematics. </bodyText>
+a small-size font for inline mathematics. </bodyText>
 <subparagraph id="tsid_3141610">
 <sectiontitle>To enter a vertical fraction</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>expanding operators!fractions</prisec></indexitem></bodyText>
 <bodyText>Choose
-Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 object and then choose Fraction. </bodyText>
 <bodyText>The program treats
 binomials, the <indexitem req="varioref"><prisec>Legendre symbol</prisec></indexitem>Legendre
@@ -136,11 +135,11 @@ them quickly with keyboard shortcuts. As with other mathematical templates,
 you can apply the subscript and superscript templates to selections. </bodyText>
 <subparagraph id="tsid_3141614">
 <sectiontitle>To enter a subscript</sectiontitle> 
-<bodyText>Choose Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+<bodyText>Choose Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 object and then choose Subscript. </bodyText></subparagraph>
 <subparagraph id="tsid_3141615">
 <sectiontitle>To enter a superscript</sectiontitle> 
-<bodyText>Choose Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+<bodyText>Choose Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 Objects and then choose Superscript. </bodyText>
 <bodyText>If you enter
 a new subscript or superscript when the insertion point is inside an existing
@@ -192,7 +191,7 @@ type; displayed operators are set in larger type. </bodyText>
 <numberedListItem><bodyText>Place the insertion point where
 you want the operator to appear. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Choose
-Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 Objects <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Operator.
 The <indexitem req="varioref"><prisec>integral!on Insert menu</prisec></indexitem>Operators
 dialog box appears. 
@@ -310,7 +309,7 @@ to encompass their contents. To work with a matrix or vector more easily,
 you can outline the cells on the screen with the View <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Helper
 lines command; the outlines don't appear in print. </bodyText>
 <bodyText>Matrices
-and vectors can be placed<hspace type="nonBreakingSpace"> </hspace>inline
+and vectors can be placed inline
 or in displays. </bodyText>
 <subparagraph id="tsid_3141623">
 <sectiontitle>To enter a matrix</sectiontitle> 
@@ -428,7 +427,7 @@ word to be a variable. </bodyText></subparagraph>
 <sectiontitle>To create a math name</sectiontitle> 
 
 <numberedlist>  
-<numberedListItem><bodyText>Choose Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+<numberedListItem><bodyText>Choose Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 Objects <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 Name. The Math Name dialog box appears. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Enter
@@ -458,7 +457,7 @@ can add <indexitem req="varioref"><prisec>accents!as decorations</prisec></index
 including wide accents, bars, arrows, and boxes above, below, and around
 expressions. Additionally, you can add <indexitem req="varioref"><prisec>labels!in mathematics</prisec></indexitem>labels
 above and below expressions. When you enter a decoration or a label, the
-program creates a template with two parts:<hspace type="nonBreakingSpace"> </hspace>
+program creates a template with two parts: 
 the expression to be decorated or labeled and the decoration or label itself.
 Decorations are elastic; they expand to encompass the expression they decorate.
 Labels are set in small type. </bodyText>
@@ -499,7 +498,7 @@ the program automatically provides appropriate spacing for mathematics,
 you don't need to use the spacebar to type horizontal spaces in mathematics.
 In fact, by default the spacebar doesn't add space when the insertion point
 is in mathematics. Occasionally, however, you may want to add extra space
-to an expression.<hspace type="nonBreakingSpace"> </hspace> Additionally,
+to an expression.  Additionally,
 you can enter positive and negative custom space, which the program applies
 when you typeset your document. You can indicate places in an expression
 where a break is appropriate, required, or prohibited. </bodyText>
@@ -589,7 +588,7 @@ document. </bodyText>
 <sectiontitle>To create a mathematical display</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>mathematical displays!creating</prisec></indexitem></bodyText>
 <bodyText>Choose
-Insert<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
+Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Math
 Objects and choose Display. </bodyText>
 <bodyText>The program centers an
 input box for a display on a new line and places the insertion point inside
@@ -784,7 +783,7 @@ with predefined mathematical expressions. </bodyText>
 <bodyText>Automatic
 substitution of mathematics works like automatic substitution for text.
 You activate it for mathematics just as you do for text, using the Autosubstitution
-dialog box accessed via Tools<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Auto
+dialog box accessed via Tools <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Auto
 Substitution. Using this dialog box, you can view the various pre-defined
 mathematical auto substitution sequences. For more information on auto substitution
 in general, consult the previous chapter. </bodyText>
