--- a/prince/helpfiles/locale/en-us/cd06-02-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-02-finaltouch.xhtml
@@ -45,23 +45,23 @@ the tertiary entry might be With Scientific Workplace. This allows you to
 create indexes that are organized and easier for a reader to search. For
 instance: </bodyText><hspace dim="0.0em" type="noIndent"/>
 <table cellspacing="2" cellpadding="2" border="1" opt="l" id="tsid_3141647"><tbody><tr><td><bodyText>
-<hspace type="twoEmSpace" dim="2em"/>Files<hspace type="nonBreakingSpace"> </hspace>
+<hspace type="twoEmSpace" dim="2em"/>Files 
 </bodyText>
 </td></tr><tr><td><bodyText>
 <hspace type="twoEmSpace" dim="2em"/>
-<hspace type="emSpace" dim="1em"/>Opening<hspace type="nonBreakingSpace"> </hspace>
-</bodyText>
-</td></tr><tr><td><bodyText>
-<hspace type="twoEmSpace" dim="2em"/>
-<hspace type="emSpace" dim="1em"/>
-<hspace type="emSpace" dim="1em"/>with
-Scientific Workplace<hspace type="nonBreakingSpace"> </hspace>
+<hspace type="emSpace" dim="1em"/>Opening 
 </bodyText>
 </td></tr><tr><td><bodyText>
 <hspace type="twoEmSpace" dim="2em"/>
 <hspace type="emSpace" dim="1em"/>
 <hspace type="emSpace" dim="1em"/>with
-another program<hspace type="nonBreakingSpace"> </hspace>
+Scientific Workplace
+</bodyText>
+</td></tr><tr><td><bodyText>
+<hspace type="twoEmSpace" dim="2em"/>
+<hspace type="emSpace" dim="1em"/>
+<hspace type="emSpace" dim="1em"/>with
+another program
 </bodyText>
 </td></tr><tr><td><bodyText>
 <hspace type="twoEmSpace" dim="2em"/>
@@ -412,11 +412,11 @@ for the item whose key you selected.
 </paragraph>
 </subsubsection>
 <subsubsection id="tsid_3141631">
-<sectiontitle>Adding a<hspace type="nonBreakingSpace"> </hspace><texb enc="1" name="TeXhd"><![CDATA[\TeXhd{}]]></texb>
+<sectiontitle>Adding a <texb enc="1" name="TeXhd"><![CDATA[\TeXhd{}]]></texb>
 Field</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>TeX fields</prisec></indexitem>If
 you are proficient with <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>,
-you can insert a<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+you can insert a <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 field wherever you like to achieve certain special effects. For instance,
 the drop capital letters used in this document were created with objects
 that reference the lettrine package. </bodyText>
@@ -438,7 +438,7 @@ whether it uses a specific package and any options for that package. </bodyText>
 <numberedListItem><bodyText>Enter
 the code for the field. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Click
-OK. The<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+OK. The <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 field is inserted. </bodyText>The following illustration shows the dialog
 box as filled out for the dropped-capital field. 
 <centeredEnv><bodyText>  <hspace dim="-\leftmargini " type="customSpace"/><object data="graphicscd/tex_field_contents.png" id="tsid_3141638"/></bodyText></centeredEnv>
@@ -457,13 +457,13 @@ a Document's Appearance</sectiontitle>
 <bodyText>Although much of a document's
 appearance is established by the document shell, you have certain choices
 available to you for either supplementing or overriding the shell defaults.
-You can choose to specify<hspace type="nonBreakingSpace"> </hspace><texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
+You can choose to specify <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo>
 options and add packages to give you additional formatting capabilities.
 You can also use the <indexitem req="varioref"><prisec>page!formatting</prisec></indexitem>Document
 Format dialog box to <indexitem req="varioref"><prisec>shells!overriding defaults</prisec></indexitem>override
 default options and set preferences for how a document appears. In Version
 6, virtually all of the ways to set a document's appearance outside of shell
-choice are controlled with the Document Format dialog box.<hspace type="nonBreakingSpace"> </hspace><br/></bodyText>
+choice are controlled with the Document Format dialog box. <br/></bodyText>
 <subsubsection id="tsid_3141632">
 <sectiontitle>Using Options and Packages</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>class options</prisec></indexitem><indexitem req="varioref"><prisec>packages</prisec></indexitem>To
