--- a/prince/helpfiles/locale/en-us/cd06-04-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-04-finaltouch.xhtml
@@ -49,12 +49,12 @@ you've assigned an identifying key or marker. Specifically, you can create
 links from your document to </bodyText>
 
 <bulletlist>  
-<bulletListItem><bodyText><hspace type="nonBreakingSpace"> </hspace>
+<bulletListItem><bodyText>
 A marker elsewhere in the current document. </bodyText></bulletListItem>
-<bulletListItem><bodyText><hspace type="nonBreakingSpace"> </hspace>
+<bulletListItem><bodyText>
 A different document located on your computer or network, or a marker in
 that document. </bodyText></bulletListItem>
-<bulletListItem><bodyText><hspace type="nonBreakingSpace"> </hspace>
+<bulletListItem>
 Any URL location or file on the Web. 
 
 </bodyText>
@@ -76,7 +76,7 @@ to which to link. </bodyText>
 <numberedListItem><bodyText>Click to move the insertion
 point to the place where you'd like to be able to link. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Choose
-Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Marker...<hspace type="nonBreakingSpace"> </hspace>
+Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Marker...
 The Insert Marker dialog box appears. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Provide
 a unique name for the link. </bodyText></numberedListItem>
