Display the Angstrom unit.

--- a/prince/helpfiles/locale/en-us/dm14-04-entering_mathematics.xhtml
+++ b/prince/helpfiles/locale/en-us/dm14-04-entering_mathematics.xhtml
@@ -3668,6 +3668,7 @@ Units from the Keyboard</html:sectiontitle></html:section>
 <td>&#xc5;ngstr&#xf6;m</td>
 <td>
 <mml:math display="inline">
+<mml:mi class="msi_unit" mathcolor="green">&#xc5;</mml:mi>
 </mml:math>
 </td>
 <td>
